<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_select" android:title="@string/text_select" app:showAsAction="always" />
    <item android:id="@id/action_paste" android:title="@string/text_paste" app:showAsAction="always" />
    <item android:id="@id/action_select_all" android:title="@string/text_select_all" app:showAsAction="ifRoom" />
    <item android:id="@id/action_copy_line" android:title="@string/text_copy_line" app:showAsAction="ifRoom" />
    <item android:id="@id/action_cut_line" android:title="@string/text_cut_line" app:showAsAction="ifRoom" />
    <item android:id="@id/action_delete_line" android:title="@string/text_delete_line" app:showAsAction="ifRoom" />
</menu>
