<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="12.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="24.0dp" android:paddingEnd="24.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_path">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/path" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_password">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/password" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_alias">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/alias" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_alias_password">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/aliasPassword" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox android:id="@id/remember" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/text_signing_remember_password" />
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_years">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/years" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_country_code">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/countryCode" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_dialog_create_signing_config" />
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_name">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/name" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_organization">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/organization" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_organization_unit">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/organizationUnit" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_state">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/state" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_city">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/city" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
