<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="12.0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="24.0dp" android:paddingEnd="24.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_path">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/path" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_import_password">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/password" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_alias">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/alias" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_signing_import_alias_password">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/aliasPassword" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_dialog_import_signature" />
</LinearLayout>
