<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="16.0dp" android:paddingTop="16.0dp" android:paddingRight="16.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_find">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/keywords" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.checkbox.MaterialCheckBox android:id="@id/checkboxRegex" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_regex" />
    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/text_replace">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/replacement" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@id/checkboxReplace" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/text_replace" android:layout_weight="1.0" />
        <com.google.android.material.checkbox.MaterialCheckBox android:id="@id/checkboxReplaceAll" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/text_replace_all" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:textColor="#ff929397" android:padding="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_regex" />
</LinearLayout>
